--- a/config.ini
+++ b/config.ini
@@ -7,3 +7,7 @@ until = 2023-12-31
 
 [Download]
 directory = E:\OneDrive - DBI Analytics GmbH\Archiv\20220530\Desktop\toggle
+mode = recurring
+#This can be "init" or "recurring"
+recurring_days_back = 7
+
