anonymized config.ini

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,14 @@
 [Toggl]
-api_token = e85bd500ae5a13dd8e975eb09944f5e3
+api_token = 123456
+#paste your api key here
 
 [Payload]
 since = 2023-01-01
 until = 2023-12-31
 
 [Download]
-directory = E:\OneDrive - DBI Analytics GmbH\Archiv\20220530\Desktop\toggle
+directory = <yourfolderpathtostore just paste it here>
+#Where to store the csv files
 mode = recurring
 #This can be "init" or "recurring"
 recurring_days_back = 7
