--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,25 @@
 [Toggl]
-api_token = 123456
+api_token = 878a8c52e769e4bdc7c58fe07e8ff872
 #paste your api key here
+email = alex.below@dbi-analytics.de
+password = D0p3l3x2604*
+workspace_id = 1345262
 
 [Payload]
-since = 2023-01-01
-until = 2023-12-31
+start_date = 2022-09-28
+since = 2022-09-25
+end_date = 2023-09-25
+until = 2023-09-25
 
 [Download]
-directory = <yourfolderpathtostore just paste it here>
+directory = C:\DEV\Python\DBI\Toggle
 #Where to store the csv files
 mode = recurring
 #This can be "init" or "recurring"
-recurring_days_back = 7
+recurring_days_back = 365
 
+[PostgreSQL]
+host = dbi-dev.postgres.database.azure.com
+dbname = postgres
+user = dbiadmin
+password = Db1admin
